--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.App ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 .App-logo {
   animation: spin infinite 20s linear;
   height: 80px;
