--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 }
 
 .App-logo {
-  animation: spin infinite 20s linear;
+  animation: spin infinite 3s ease-in-out;
+  animation-direction: alternate;
   height: 80px;
 }
 
@@ -25,6 +26,6 @@
 }
 
 @keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from { transform: rotate(-15deg); }
+  to { transform: rotate(15deg); }
 }
